fix showbadges gap (#41)

--- a/src/equicordplugins/showBadgesInChat/styles.css
+++ b/src/equicordplugins/showBadgesInChat/styles.css
@@ -37,4 +37,5 @@
     display: inline-flex;
     margin-left: 2;
     vertical-align: top;
+    height: 1rem;
 }
